feat Actualización modelo de datos
- Para las tablas modificadas se actualiza el modelo, controlador y swagger.
